--- a/TeamInfo/PlayerInfo/PlayerInfo.html
+++ b/TeamInfo/PlayerInfo/PlayerInfo.html
@@ -8,7 +8,7 @@
     <title>palyerInfo</title>
 </head>
 
-<body>
+<body style="background-color:#deedf0;">
     <div id="player-info-root">
     </div>
     <script src="PlayerInfo.js"></script>
