--- a/TeamInfo/TeamInfo.html
+++ b/TeamInfo/TeamInfo.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="TeamInfo.css">
     <title>TeamInfo</title>
 </head>
 
 <body>
-    <div id="team-info-root">
+    <div id="team-info-root" style="background-color:#deedf0;">
     </div>
     <script src='TeamInfo.js'></script>
 </body>
