--- a/index.html
+++ b/index.html
@@ -12,30 +12,74 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
   <!-- <script src="./Data/data.js"></script> -->
   <title>Welcome HomePage</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
+
+
 <body>
   <div id="navbar"
-    style="box-shadow: 0 4px 4px #ccc; width: 100%; height: 10vh; display: flex; justify-content: space-between; align-items: center; text-align: center; position: fixed; z-index: 1; background-color: #fff;">
+    style="box-shadow: 0 4px 4px #ccc; width: 100%; height: 10vh; display: flex; justify-content: space-between; align-items: center; text-align: center; position: fixed; z-index: 1; background-color: #fff; margin-top: -4%;">
     <div id="tittle-logo" style="display:flex; margin-left:3%">
       <img src="./img_QxD_1.ico" style="width: 12%;" alt="abcd">
-      <h2 style="padding-top: 1.5%;">Cricket League</h2>
+      <a href="#home-page-root" style="text-decoration: none; color: black;"><h2 style="padding-top: 3.5%;"><b>CRICKET League</b></h2></a>
     </div>
     <div style="margin-right: 8%; display:flex;">
-      <input id="search-bar" type="text" placeholder="Enter the Team Name">
-      <select id="add">
+      <input id="search-bar" type="text" placeholder="Enter the Team Name" style="border-radius: 16px; text-decoration: none; outline: none; padding-left: 2%; margin-right: 2%;">
+      <select id="add" style="text-decoration: none; outline: none; border-radius: 10px; cursor: pointer;">
         <option value="add_team">AddTeam</option>
         <option value="add_player">AddPlayer</option>
       </select>
     </div>
   </div>
-  <div id="home-page-root"></div>
+
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"; style="background-color: #deedf0;">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" style="width: 60%; margin-top: 4%; margin-left: auto; margin-right: auto;">
+      <div class="carousel-item active">
+        <img src="https://i.cdn.newsbytesapp.com/images/l197_9401613468511.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://cdn.dnaindia.com/sites/default/files/styles/full/public/2020/09/12/924640-924485-twitter-3.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://cdn.dnaindia.com/sites/default/files/styles/full/public/2019/11/15/881219-twitter-7.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
+
+  
+  <div id="home-page-root" style="background-color: #deedf0;"></div>
   <div id="add-modal-Container">
     <button id='close-modal'>X</button>
-    <div id="add-modal-body">
+    <div id="add-modal-body" style="background-color: #fff5b7;">
     
     </div>
   </div>
